tests/integration/snapshots/integration__snapshot__self_hosted-4.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"self-hosted/self-hosted-runner-group.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
note[self-hosted-runner]: runs on a self-hosted runner
 --> @@INPUT@@:8:5
  |
8 | /     runs-on:
9 | |       group: ubuntu-runners
  | |___________________________- note: runner group implies self-hosted runner
  |
  = note: audit confidence → Low

1 finding: 1 unknown, 0 informational, 0 low, 0 medium, 0 high
