tests/integration/snapshots/integration__snapshot__self_hosted-6.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"self-hosted/self-hosted-matrix-inclusion.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
note[self-hosted-runner]: runs on a self-hosted runner
  --> @@INPUT@@:10:5
   |
 8 |       runs-on: ${{ matrix.os }}
   |       ------------------------- note: expression may expand into a self-hosted runner
 9 |
10 | /     strategy:
11 | |       matrix:
12 | |         os: [macOS-latest, ubuntu-latest]
13 | |         include:
14 | |           - os: self-hosted
   | |___________________________- note: matrix declares self-hosted runner
   |
   = note: audit confidence → High

1 finding: 1 unknown, 0 informational, 0 low, 0 medium, 0 high
