tests/integration/snapshots/integration__snapshot__self_hosted-8.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"self-hosted/issue-283-repro.yml\")).args([\"--persona=auditor\"]).run()?"
snapshot_kind: text
---
No findings to report. Good job!
