tests/integration/snapshots/integration__snapshot__stale_action_refs.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"stale-action-refs.yml\")).offline(false).args([\"--persona=pedantic\"]).run()?"
---
help[stale-action-refs]: commit hash does not point to a Git tag
  --> @@INPUT@@:28:7
   |
28 |     - uses: actions/checkout@009b9ae9e446ad8d9b8c809870b0fbcc5e03573e
   |       --------------------------------------------------------------- help: this step
   |
   = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 1 low, 0 medium, 0 high
