tests/integration/snapshots/integration__snapshot__template_injection-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/template-injection-dynamic-matrix.yml\")).args([\"--persona=auditor\"]).run()?"
---
warning[template-injection]: code injection via template expansion
  --> @@INPUT@@:19:9
   |
19 |         - name: Please dont
   |           ----------------- this step
20 | /         run: |
21 | |           echo "doing a thing: ${{ matrix.dynamic }}"
   | |______________________________________________________- matrix.dynamic may expand into attacker-controllable code
   |
   = note: audit confidence → Medium

1 finding: 0 unknown, 0 informational, 0 low, 1 medium, 0 high
