tests/integration/snapshots/integration__snapshot__template_injection-5.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"template-injection/static-env.yml\")).run()?"
snapshot_kind: text
---
help[template-injection]: code injection via template expansion
  --> @@INPUT@@:41:9
   |
41 |         - name: step-level-non-static
   |           --------------------------- help: this step
42 | /         run: |
43 | |           echo ${{ env.bar }}
   | |_____________________________- help: env.bar may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:48:9
   |
48 |         - name: job-level-non-static
   |           -------------------------- help: this step
49 | /         run: |
50 | |           echo ${{ env.foo }}
   | |_____________________________- help: env.foo may expand into attacker-controllable code
   |
   = note: audit confidence → High

help[template-injection]: code injection via template expansion
  --> @@INPUT@@:53:9
   |
53 |         - name: workflow-level-non-static
   |           ------------------------------- help: this step
54 | /         run: |
55 | |           echo ${{ env.quux }}
   | |_______________________________- help: env.quux may expand into attacker-controllable code
   |
   = note: audit confidence → High

3 findings: 0 unknown, 0 informational, 3 low, 0 medium, 0 high
